--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "set PORT=8080 && react-scripts start",
